<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_mode_of_training"
            android:icon="@drawable/ic_menu_mode_of_training"
            android:title="@string/menu_mode_of_training" />
        <item
            android:id="@+id/nav_daily_training"
            android:icon="@drawable/ic_menu_daily_training"
            android:title="@string/menu_daily_training" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendar" />
    </group>
</menu>