<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modeOfTraining.ModeOfTrainingFragment">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_easy" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_medium" />

        <RadioButton
            android:id="@+id/rb_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_hard" />

        <RadioButton
            android:id="@+id/rb_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_custom" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_a_mode"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_mode"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="Save Mode"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_alarm_state"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="128dp"
        android:text="@string/alarm_off"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_save_mode"
        app:layout_constraintStart_toStartOf="@+id/btn_save_mode"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_mode" />

    <TextView
        android:id="@+id/tv_alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inconsolata_bold"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/sw_alarm_state"
        app:layout_constraintStart_toStartOf="@+id/sw_alarm_state"
        app:layout_constraintTop_toBottomOf="@+id/sw_alarm_state" />

</androidx.constraintlayout.widget.ConstraintLayout>